# desktop

./: .gitignore  package-lock.json  package.json  tsconfig.base.json  turbo.json
.agent/known-issues/: vite-tailwind-stale-deleted-file.md
apps/desktop/: .gitignore  e2e-financials.mjs  e2e-pagination.mjs  e2e-partial-settle.mjs  e2e-pipeline.mjs  e2e-reports.mjs  index.html
apps/desktop/src/: App.tsx
apps/desktop/src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: api_data.rs  backup.rs  bookings.rs  customers.rs  db.rs  financials.rs  inventory.rs  lib.rs  license.rs  media.rs  restore.rs  server.rs  suppliers.rs
apps/desktop/src/components/: cloud-status.tsx  cloud-sync-manager.tsx  confirm.tsx  drawer-card.tsx  entity-picker.tsx  import-result-dialog.tsx  pin-input.tsx  toaster.tsx
apps/desktop/src/lib/: api.ts  backup-api.ts  bookings-api.ts  csv.ts  customers-api.ts  financials-api.ts  roles.ts  (+11 more)
docs/: brand-identity.md  cloud-backend-architecture.md  cloud-sync-protocol.md  demo-credentials.md  positioning.md  zorviz-proposal.html
docs/backlog/: README.md  phase-0-completed.md  phase-0-ship-blockers.md  phase-1-backlog.md  phase-1-completed.md  phase-2-backlog.md  phase-2-completed.md  phase-3-backlog.md  phase-3-completed.md  phase-4-backlog.md  v1-decisions.md
docs/runbooks/: demo.md  license-keygen.md  pre-ship-checklist.md
lan-server-spike/: .gitignore  package-lock.json  package.json  run.ps1  server.js
lan-server-spike/src/: main.rs
scripts/demo/: seed.mjs
(+30 files in other folders)
